--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,14 @@
             <artifactId>easypoi-base</artifactId>
             <version>3.2.0</version>
         </dependency>
+
+
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.8</version>
+        </dependency>
     </dependencies>
 
 
