--- a/pom.xml
+++ b/pom.xml
@@ -14,8 +14,11 @@
             <artifactId>easypoi-base</artifactId>
             <version>3.2.0</version>
         </dependency>
-
-
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>28.0-jre</version>
+        </dependency>
 
         <dependency>
             <groupId>org.projectlombok</groupId>
